# tauri-lievkit-with-custom-sharescreen-ui

./: README.md
frontend/: TODO.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  router.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  desktop.json
frontend/src-tauri/src/: dto.rs  lib.rs  main.rs  tray.rs
frontend/src-tauri/src/app_window/: autostart.rs  mod.rs  panic_hook.rs  setup_window.rs
frontend/src-tauri/src/share_screen/: command.rs  dto.rs  manager.rs  mod.rs  webrtc.rs
frontend/src-tauri/src/share_screen/capture/: mod.rs  monitor.rs  windows.rs
frontend/src-tauri/src/sharescreen/: capturer.rs  command.rs  draw_overlay.rs  dto.rs  get_windows.rs  mod.rs
frontend/src/@types/: cookie-store.d.ts
frontend/src/assets/styles/: global.css  tauri.css
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  autocomplete.tsx  avatar.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  dock.tsx  empty.tsx  frame.tsx  group.tsx  input-group.tsx  menu.tsx  number-field.tsx  pagination.tsx  popover.tsx  preview-card.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  toast.tsx  toggle.tsx  tooltip.tsx
frontend/src/features/meeting/layout/: dummies-layout.tsx  index.ts  small-size-meeting.layout.tsx
frontend/src/hooks/: device-theme-provider.d.ts  device-theme-provider.tsx  shadcn-provider.tsx  theme-provider.tsx  use-app-error.tsx  use-debug-stream-fps.tsx  use-screen-capture.tsx  use-theme.tsx  use-vh.tsx
frontend/src/lib/: utils.ts
