[package]
name = "tauri-livekit-with-custom-sharescreen-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Barnando Akbarto Hidayatullah"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_livekit_with_custom_sharescreen_ui_lib"

[dependencies]
base64 = "0.22.1"
dashmap = { version = "6.1.0", features = ["serde"] }
futures = "0.3.31"
lazy_static = "1.5.0"
png = "0.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
thiserror = "1"
tokio = { version = "1.49", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
webrtc = "0.17.1"
window-vibrancy = "0.7.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
anyhow = "1.0"
env-libvpx-sys = { version = "5.1.3", features = ["generate"] }
fast_image_resize = { version = "6.0", default-features = false, features = [
  "no_std"
] }
image = "0.25.9"
rayon = "1.11.0"
tauri-plugin-autostart = "2"
vpx-encode = "=0.6.0"
webm = "2.2.0"
wgc = "0.0.2"
windows = { version = ">=0.61, <=0.62.2", features = [
  "Foundation",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_UI_WindowsAndMessaging",
] }
windows-capture = "2.0.0-alpha.7"
windows-core = { package = "windows-core", version = ">=0.61, <=0.62.2" }
